--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=80
 server.servlet.context-path=/hy
 
 index = hanyang
-Phones&Accessories = PA
-Computer&Office = CO
+Phone = phone
+Computer = pc
 ConsumerElectronics = ConsumerE
 Women'sClothes = Women-sClothes
 Men'sClothes = Men-sClothes
