--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,6 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-data-rest")
 	implementation('mysql:mysql-connector-java')
 //    implementation('org.springframework.boot:spring-boot-starter-security')
+
+	compileOnly('org.projectlombok:lombok')
 }
