--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ Shoes&Bags = ShoesBags
 spring.datasource.url=jdbc:mysql://39.98.87.86:3306/pa?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456a?
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
