--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('com.alibaba:druid-spring-boot-starter:1.1.10')
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	compile('com.alibaba:fastjson:1.2.49')
 	implementation("org.springframework.boot:spring-boot-starter-data-rest")
