--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,25 @@ spring.datasource.url=jdbc:mysql://39.98.87.86:3306/pa?allowMultiQueries=true&us
 spring.datasource.username=root
 spring.datasource.password=123456a?
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.initial-size = 8
+spring.datasource.druid.min-idle= 1
+spring.datasource.druid.max-active= 20
+spring.datasource.druid.max-wait= 60000
+spring.datasource.druid.time-between-eviction-runsMillis= 60000
+spring.datasource.druid.min-evictable-idle-timeMillis= 300000
+spring.datasource.druid.validation-query= select 'x' FROM DUAL
+spring.datasource.druid.test-while-idle= true
+spring.datasource.druid.test-on-borrow= false
+spring.datasource.druid.test-on-return= false
+spring.datasource.druid.pool-prepared-statements= true
+spring.datasource.druid.max-open-prepared-statements= 20
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size= 20
+spring.datasource.druid.filters= stat
+spring.datasource.druid.connection-properties= druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+spring.datasource.druid.use-global-data-source-stat= true
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
